// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`exports-snapshot pkg-placeholder - . - runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`pkg-placeholder\` */
export var one
export var two"
`;

exports[`exports-snapshot pkg-placeholder - . - dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`pkg-placeholder\` */
/* no exports */"
`;
